# transcriby

./: .gitignore  INSTALL_WINDOWS.md  README.md  RELEASE.md  build_windows.py  pyproject.toml  requirements.txt  run_windows.bat  sp-launch.py  transcriby-launch.py
.github/workflows/: macos-release.yml  windows-release.yml
docs/: manual-regression-checklist.md  release-workflows.md
slowplay/: __init__.py  aboutdialog.py  appsettings.py  filedialogs.py  platform_utils.py  player.py  recentdialog.py  slowplay.py  sp_constants.py  utils.py  ytmanage.py
tests/: test_mpv_options.py  test_player.py  test_qt_controller.py  test_qt_widgets.py
tools/: build_windows.py  fetch_mpv.ps1  generate_icons_from_svg.py  macos_bundle_dylibs.py  package_windows.ps1  refresh_windows_icon_cache.ps1  set_build_version.py
transcriby/: __init__.py  aboutdialog.py  app_constants.py  appsettings.py  build_version.py  debuglog.py  filedialogs.py  mpv_options.py  platform_utils.py  player.py  qt_controller.py  qt_main.py  qt_settings_dialog.py  qt_timeline.py  qt_widgets.py  qt_window.py  recentdialog.py  sessionfile.py  slowplay.py  sp_constants.py  transcriby.py  utils.py  waveform.py  ytmanage.py
transcriby/locales/: slowplay.pot
transcriby/locales/it/LC_MESSAGES/: slowplay.po
